--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./nodejs.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 <div class="message">你好 nodejs</div>
-<script src="nodejsAsset.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
